# kalshi_bot

./: .env.example  .gitignore  CLAUDE.md  DATA_COLLECTION_SPEC.md  README.md  WEATHER_DATA_AUDIT.md  config.yaml  demo_backtest.py  entrypoint.sh  kalshi_project_plan.md  pyproject.toml  strategy_summary.md
claude_design/: INTEGRATION.md  README.md  distribution.py  nbm_client.py  nws_client.py  recommender.py  stations.py  test_forecast.py
scripts/: _kalshi_api.py  augment_orders.py  backfill_market_results.py  backtest_v1.py  daily_pnl.py  explore_universe.py  fills.py  find_liquid_markets.py  list_events.py  list_markets.py  list_series.py  parquet_to_csv.py  plot_analysis.py  plot_common.py  plot_edge_vs_pnl.py  plot_position_trends.py  plot_return_by_hour.py  portfolio.py  position_pnl.py  replay.py  settlements.py  transaction_summary.py
src/: config.py  main.py  portfolio.py
src/data/: base.py  weather.py
src/execution/: base.py  live_trader.py  paper_trader.py  sizer.py
src/kalshi/: client.py  models.py  ticker_parser.py
src/kalshi_bot/: __init__.py  __main__.py  auth.py  client.py  config.py  data_feed.py  paper_client.py  recommender.py  run.py  sell_engine.py  sizer.py  temp_recommender.py
src/strategies/: base.py  btc_strategy.py  (+2 more)
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_data_feed.py  test_forecast.py  test_models.py  test_null_strategy.py  test_paper_trader.py  test_portfolio.py  test_recommender.py  test_risk_controls.py  test_sell_engine.py  test_sizer.py  test_ticker_parser.py  test_weather_strategy.py
(+31 files in other folders)
